Almost finished the UI for the positioning tab Everything on the positioning tab is looking good, there are some tabs that have scrunched text when the screen goes too small. Should be an easy fix by adding a gap property to the class so that the text never touches.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,10 @@
   font-family: "Inter", sans-serif
 }
 
+.btn:hover {
+  cursor: pointer;
+}
+
 .si-tab {
   font-weight: 600;
   border: none;
